# python-mwchatter

./: ChineseCSWWikis.ipynb  ChineseCSWWikisV2.ipynb  README.md  example.py  multilingual_test.py  parse_talk_pages.sh  pyproject.toml  scrapeTalkPages.py  scrapeTalkPages.sh  test_results.txt  test_results_german_spanish_chinese.txt
mwchatter/: signatureutils.py
talk_samples/article/: 599458153.json  687993820.json  693846403.json  693870767.json  694061598.json
talk_samples/user/: 687428034.json  692726230.json  692730409.json
talk_samples/wiki/: 558617879.json  574286642.json  692684350.json  692764699.json
test/: 1279194.json  1279194.txt  1297234.json  1297234.txt  2077017.json  2077017.txt  2476292.json  2476292.txt  2483507.json  2483507.txt  272523.json  272523.txt  4057641.json  4057641.txt  4584058.json  4584058.txt  4606055.json  4606055.txt  4615255.json  4615255.txt  5324545.json  5324545.txt  6362742.json  6362742.txt  6751327.json  6751327.txt  681901.json  681901.txt  711586.json  711586.txt  7215406.json  7215406.txt  7342271.json  7342271.txt  7599477.json  7599477.txt  782036.json  782036.txt  823242.json  823242.txt  (+40 more)
wikichatter/: comment.py  page.py  section.py  signatureutils.py  talkpageparser.py
