[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mwchatter"
version = "0.0.2"
authors = [
  { name="Kevin Schiroo"},
  { name="Eleanor Lin"},
]
description = "Parser for MediaWiki talk pages"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "jsonschema>=2.5.1",
    "mwparserfromhell>=0.4.3",
]

[project.urls]
Homepage = "https://github.com/emlinking/python-mwchatter"

[tool.setuptools]
packages = ["mwchatter"]